rollup 任务添加 react 的 jsx 处理插件

--- a/example/src/index.html
+++ b/example/src/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>Example</title>
     <script src="js/lib/vue.js"></script>
+    <script src="js/lib/react.js"></script>
+    <script src="js/lib/react-dom.js"></script>
 </head>
 
 <body>
@@ -61,6 +63,7 @@
 
         <h2>7. 用rollup打包脚本（rollup_bundle）：</h2>
         <div id="vueApp"></div>
+        <div id="reactApp"></div>
         <p>
             <script src="js/use-es6-module.js"></script>
         </p>
