--- a/example/src/index.html
+++ b/example/src/index.html
@@ -47,9 +47,8 @@
         <h2>6. 处理 vue/react 组件：</h2>
         <div id="vueApp"></div>
         <div id="reactApp"></div>
-        <p>
-            <script src="js/use-components.js"></script>
-        </p>
+        <script src="js/use-vue-component.js"></script>
+        <script src="js/use-react-component.js"></script>
 
         <h2>7. 分发并替换文件链接：</h2>
         <p>
