--- a/example/src/index.html
+++ b/example/src/index.html
@@ -52,7 +52,7 @@
 
         <h2>7. 分发并替换文件链接：</h2>
         <p>
-            <img src="images/old-street.jpg" data-org-src="images/old-street.jpg" />
+            <img src="images/IMG_2771.JPG" data-org-src="images/IMG_2771.JPG" style="width: 100%" />
         </p>
     </article>
 
