多项更新: webpack 和 browserify 打包时启用 babel-runtime; browserify 启用 babel-preset-stage2; 更新示例项目;

--- a/example/src/index.html
+++ b/example/src/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Example</title>
+    <!-- regenerator 等兼容库，使用 webpack、browserify 打包时已启用 babel-runtime，无需使用此 polyfill -->
+    <script src="js/lib/babel-polyfill.min.js"></script>
 </head>
 
 <body>
